# proginoServer

./: .gitignore  main.py  memo.md  pyproject.toml  server.py
preferences/: languages.json
problems/: meta.json
problems/1/: 1.json  problem.md
problems/2/: 2.json  problem.md
problems/3/: 3.json  gen.py  problem.md
problems/3/in/: 10.txt  20.txt  21.txt  24.txt  25.txt  26.txt  29.txt  5.txt  8.txt
problems/4/: 4.json
problems/4/in/: 0.txt  1.txt  10.txt  11.txt  12.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  4.txt  5.txt  6.txt  8.txt  9.txt
problems/5/: 5.json  gen.py  problem.md  solver.py
problems/5/in/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
problems/6/: 6.json  gen.py  problem.md  solve.py
problems/6/in/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  (+18 more)
problems/7/: 7.json  gen.py  problem.md
problems/8/: 8.json  gen.py  problem.md  solve.py
problems/base/: base.json  problem.md
static/: course.html  front.html  login.html  loginRedirection.html  problems.html  submission.html
status/: status.json
submissions/: submissions.json
submissions/4/: Main.py
(+40 files in other folders)
