[tool.poetry]
name = "proginoServer"
version = "0.1.0"
description = ""
authors = ["WhiteF326 <Lume1a326.leno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
fastapi = {extras = ["all"], version = "^0.74.0"}
Markdown = "^3.3.6"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
